infra/k8s/services/client.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ecs
  name: ecs-client-svc
spec:
  selector:
    app: ecs-client
  ports:
    - name: ecs-client
      protocol: TCP
      port: 8000
      targetPort: 80
