infra/k8s/services/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecs-pg-db-svc
spec:
  selector:
    app: ecs-pg-db
  ports:
    - name: ecs-pg-db
      protocol: TCP
      port: 5432
      targetPort: 5432
