infra/k8s/services/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecs-server-svc
spec:
  selector:
    app: ecs-server
  ports:
    - name: ecs-server
      protocol: TCP
      port: 1337
      targetPort: 1337
