infra/k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ecs
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: server.ecs.dev
      http:
        paths:
          - path: /?(.*)
            pathType: 'Prefix'
            backend:
              service:
                name: ecs-server-svc
                port:
                  number: 1337
    - host: ecs.dev
      http:
        paths:
          - path: /?(.*)
            pathType: 'Prefix'
            backend:
              service:
                name: ecs-client-svc
                port:
                  number: 8000
